Added saving chat history but threads are an asshole rn so i have to separate onto here